# convx

./: .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml
history/pascal/codex/: .2026-02-15-1642-can-you-check--history-codex-for-the-previous-conversation-w.json
history/pascal/cursor/: .2026-02-15-1626-gitignore-for-python-defaults.json  .2026-02-19-1743-ai-session-extraction-from-cursor.json  .2026-02-20-0902-ok-commit-what-we-have-to-repo-pls.json  .2026-02-24-1833-legend-alignment-in-react-component.json  .2026-02-24-1846-stacked-word-count-tool-over-time.json  .2026-02-24-1849-markdown-code-block-rendering-issue.json  .2026-02-24-1857-cmd-k-icon-explanation.json  .2026-02-24-1906-cli-command-consistency-review.json  2026-02-15-1626-gitignore-for-python-defaults.md  2026-02-19-1743-ai-session-extraction-from-cursor.md  2026-02-24-1822-application-bug-reporting-and-resolution.md  2026-02-24-1833-legend-alignment-in-react-component.md  2026-02-24-1846-stacked-word-count-tool-over-time.md  2026-02-24-1849-markdown-code-block-rendering-issue.md  2026-02-24-1852-thinking-tool-blocks-width-adjustment.md  2026-02-24-1901-chat-session-icon-differentiation.md
src/convx_ai/: cli.py  config.py  engine.py  explore.css  sanitize.py  search.py  server.py  stats.py  tui.py
src/convx_ai/adapters/: claude.py
tests/: test_integration_claude.py  test_integration_sync.py  test_sanitize.py  test_stats.py
web/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts  (+1 more)
(+77 files in other folders)
