[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "convx-ai"
version = "0.2.7"
description = "Idempotent conversation exporter for Codex, Claude, and Cursor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["codex", "claude", "cursor", "conversation", "export", "backup"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "hyperscan>=0.2.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "rapidfuzz>=3.0",
  "tantivy>=0.22",
  "textual>=8.0",
  "textual-plotext>=1.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/pascalwhoop/convx"
Repository = "https://github.com/pascalwhoop/convx"

[project.scripts]
convx = "convx_ai.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
